# TD-Algorithm-Suite

./: LICENSE  README.md  pyproject.toml
src/td_suite/core/: base_learning_algorithm.py
src/td_suite/core/control/: sarsa.py
src/td_suite/core/prediction/__init__.py/: td_0_prediction.py
src/td_suite/policies/: base_policy.py  base_q_derived_policy.py  base_soft_policy.py  random_policy.py
src/td_suite/policies/greedy/: stochastic_start_greedy_policy.py
src/td_suite/policies/soft/: q_derived_epsilon_greedy_policy.py  stochastic_start_epsilon_greedy_policy.py
